--- a/android/build.gradle
+++ b/android/build.gradle
@@ -4,3 +4,8 @@ plugins {
     id 'com.android.library' version '8.0.1' apply false
     id 'org.jetbrains.kotlin.android' version '1.7.20' apply false
 }
+
+subprojects {
+    // 所有模块，都应用config.gradle的配置
+    apply from: "${project.rootDir}/config.gradle"
+}
