--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -44,9 +44,14 @@ android {
             excludes += '/META-INF/{AL2.0,LGPL2.1}'
         }
     }
+    buildFeatures {
+        viewBinding true
+        dataBinding true
+    }
 }
 
 dependencies {
+    implementation project(":base")
 
     implementation app_impl.core
     implementation app_impl.lifecycle
