--- a/android/config.gradle
+++ b/android/config.gradle
@@ -26,7 +26,8 @@ ext {
             material3          : 'androidx.compose.material3:material3',
             appcompat          : 'androidx.appcompat:appcompat:1.4.1',
             material           : 'com.google.android.material:material:1.5.0',
-            viewmodel_ktx      : "androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecycle_version"
+            viewmodel_ktx      : "androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecycle_version",
+            fragivity          : 'com.github.vitaviva.fragivity:core:0.3.1'
 
     ]
 
