--- a/android/config.gradle
+++ b/android/config.gradle
@@ -27,7 +27,10 @@ ext {
             appcompat          : 'androidx.appcompat:appcompat:1.4.1',
             material           : 'com.google.android.material:material:1.5.0',
             viewmodel_ktx      : "androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecycle_version",
-            fragivity          : 'com.github.vitaviva.fragivity:core:0.3.1'
+            fragivity          : 'com.github.vitaviva.fragivity:core:0.3.1',
+
+            arouter_api        : 'com.alibaba:arouter-api:1.5.2',
+            arouter_compiler   : 'com.alibaba:arouter-compiler:1.5.2'
 
     ]
 
