add retrofit for network.

--- a/android/base/build.gradle
+++ b/android/base/build.gradle
@@ -41,6 +41,8 @@ dependencies {
     api(app_impl.material)
     api(app_impl.viewmodel_ktx)
     api(app_impl.fragivity)
+    api(app_impl.retrofit)
+    api(app_impl.converterGson)
 
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
