--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -55,6 +55,18 @@ android {
         viewBinding true
         dataBinding true
     }
+
+    configurations {
+        compileClasspath {
+            resolutionStrategy.force(app_impl.activity)
+        }
+
+        all {
+            exclude group: "org.jetbrains.kotlin", module: "kotlin-stdlib-jdk7"
+            exclude group: "org.jetbrains.kotlin", module: "kotlin-stdlib-jdk8"
+
+        }
+    }
 }
 
 dependencies {
@@ -70,7 +82,6 @@ dependencies {
     implementation app_impl.material3
     implementation app_impl.arouter_api
     kapt app_impl.arouter_compiler
-    implementation(project(":base"))
 
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
