add mmkv for kv tool.

--- a/android/base/build.gradle
+++ b/android/base/build.gradle
@@ -43,6 +43,7 @@ dependencies {
     api(app_impl.fragivity)
     api(app_impl.retrofit)
     api(app_impl.converterGson)
+    implementation(app_impl.mmkv)
 
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
