--- a/android/config.gradle
+++ b/android/config.gradle
@@ -37,6 +37,8 @@ ext {
             retrofit           : "com.squareup.retrofit2:retrofit:$retrofit_version",
             converterGson      : "com.squareup.retrofit2:converter-gson:$retrofit_version",
 
+            mmkv               : 'com.tencent:mmkv-static:1.3.0',
+
     ]
 
 }
