--- a/android/base/build.gradle
+++ b/android/base/build.gradle
@@ -44,6 +44,7 @@ dependencies {
     api(app_impl.retrofit)
     api(app_impl.converterGson)
     implementation(app_impl.mmkv)
+    implementation(app_impl.glide)
 
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
