--- a/android/config.gradle
+++ b/android/config.gradle
@@ -38,7 +38,7 @@ ext {
             converterGson      : "com.squareup.retrofit2:converter-gson:$retrofit_version",
 
             mmkv               : 'com.tencent:mmkv-static:1.3.0',
-
+            glide              : 'com.github.bumptech.glide:glide:4.15.1',
     ]
 
 }
