add room for data store.

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -25,6 +25,15 @@ android {
         vectorDrawables {
             useSupportLibrary true
         }
+
+        javaCompileOptions {
+            annotationProcessorOptions {
+                arguments = [
+                        "room.schemaLocation"  : "$projectDir/schemas".toString(),
+                        "room.incremental"     : "true",
+                        "room.expandProjection": "true"]
+            }
+        }
     }
 
     buildTypes {
@@ -82,6 +91,8 @@ dependencies {
     implementation app_impl.material3
     implementation app_impl.arouter_api
     kapt app_impl.arouter_compiler
+
+    kapt app_impl.room_compiler
 
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
