--- a/android/config.gradle
+++ b/android/config.gradle
@@ -15,6 +15,7 @@ ext {
     // 第三方依赖
     def lifecycle_version = "2.6.1"
     def retrofit_version = "2.9.0"
+    def room_version = "2.5.0"
 
     app_impl = [
             activity           : 'androidx.activity:activity:1.5.1',
@@ -39,6 +40,9 @@ ext {
 
             mmkv               : 'com.tencent:mmkv-static:1.3.0',
             glide              : 'com.github.bumptech.glide:glide:4.15.1',
+            room               : "androidx.room:room-runtime:$room_version",
+            room_ktx           : "androidx.room:room-ktx:$room_version",
+            room_compiler      : "androidx.room:room-compiler:$room_version",
     ]
 
 }
