--- a/android/build.gradle
+++ b/android/build.gradle
@@ -1,11 +1,20 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
+buildscript {
+    dependencies {
+        classpath "com.billy.android:cc-register:1.1.2"
+    }
+}
+
+
 plugins {
     id 'com.android.application' version '8.0.1' apply false
     id 'com.android.library' version '8.0.1' apply false
     id 'org.jetbrains.kotlin.android' version '1.7.20' apply false
+//    id 'cc-register' version '1.1.2' apply false
 }
 
 subprojects {
     // 所有模块，都应用config.gradle的配置
     apply from: "${project.rootDir}/config.gradle"
+//    apply from: "${project.rootDir}/cc-settings-2.gradle"
 }
