--- a/android/config.gradle
+++ b/android/config.gradle
@@ -43,6 +43,8 @@ ext {
             room               : "androidx.room:room-runtime:$room_version",
             room_ktx           : "androidx.room:room-ktx:$room_version",
             room_compiler      : "androidx.room:room-compiler:$room_version",
+
+            cc                 : "com.billy.android:cc:2.1.5",
     ]
 
 }
