add launcher and auto size lib.

--- a/android/base/build.gradle
+++ b/android/base/build.gradle
@@ -60,6 +60,9 @@ dependencies {
     api(app_impl.room_ktx)
     kapt(app_impl.room_compiler)
 
+    api(app_impl.autosize)
+
+
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
