--- a/android/config.gradle
+++ b/android/config.gradle
@@ -17,6 +17,8 @@ ext {
     def retrofit_version = "2.9.0"
     def room_version = "2.5.0"
 
+    def epoxy_version = "5.1.3"
+
     app_impl = [
             activity           : 'androidx.activity:activity:1.5.1',
             core               : 'androidx.core:core-ktx:1.8.0',
@@ -47,6 +49,10 @@ ext {
             cc                 : "com.billy.android:cc:2.1.5",
 
             autosize           : 'com.github.JessYanCoding:AndroidAutoSize:v1.2.1',
+
+            epoxy              : "com.airbnb.android:epoxy:$epoxy_version",
+            epoxyKapt          : "com.airbnb.android:epoxy-processor:$epoxy_version",
+            epoxyDatabinding   : "com.airbnb.android:epoxy-databinding:$epoxy_version"
 
     ]
 
