--- a/android/base/build.gradle
+++ b/android/base/build.gradle
@@ -65,6 +65,8 @@ dependencies {
     api(app_impl.epoxy)
     api(app_impl.epoxyDatabinding)
 
+    api(app_impl.xlog)
+
 
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
