--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -22,3 +22,6 @@ kotlin.code.style=official
 # thereby reducing the size of the R class for that library
 android.nonTransitiveRClass=true
 android.enableJetifier=true
+
+#k2???
+kotlin.experimental.tryK2=true
