--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -101,6 +101,8 @@ dependencies {
 
     kapt app_impl.epoxyKapt
 
+    implementation app_impl.epic
+
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
