--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -105,6 +105,8 @@ dependencies {
 
     implementation app_impl.koin
 
+    implementation app_impl.loadsir
+
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
