--- a/android/config.gradle
+++ b/android/config.gradle
@@ -61,6 +61,8 @@ ext {
             kotlin_reflect     : "org.jetbrains.kotlin:kotlin-reflect:1.9.20",
 
             koin               : "io.insert-koin:koin-android:3.5.0",
+
+            loadsir            : "com.kingja.loadsir:loadsir:1.3.8",
     ]
 
 }
