--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -23,5 +23,5 @@ kotlin.code.style=official
 android.nonTransitiveRClass=true
 android.enableJetifier=true
 
-#k2???
-kotlin.experimental.tryK2=true
+#k2 compiler
+#kotlin.experimental.tryK2=true
