--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -83,6 +83,7 @@ android {
 
 dependencies {
     implementation project(":base")
+    implementation project(":webview")
 
     implementation app_impl.core
     implementation app_impl.lifecycle
