--- a/android/config.gradle
+++ b/android/config.gradle
@@ -63,6 +63,15 @@ ext {
             koin               : "io.insert-koin:koin-android:3.5.0",
 
             loadsir            : "com.kingja.loadsir:loadsir:1.3.8",
+
+            //Hybrid框架 https://github.com/Tencent/VasSonic
+            sonic              : 'com.tencent.sonic:sdk:3.1.0',
+            // tencent x5内核
+            tbssdk             : 'com.tencent.tbs:tbssdk:44286',
+            // google auto service
+            autoService        : 'com.google.auto.service:auto-service:1.0.1',
+            // js bridge
+            jsBridge           : "com.github.lzyzsd:jsbridge:2.0.0",
     ]
 
 }
