--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -114,6 +114,8 @@ dependencies {
 
     implementation app_impl.loadsir
 
+    implementation app_impl.lottie
+
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
