--- a/android/config.gradle
+++ b/android/config.gradle
@@ -72,6 +72,8 @@ ext {
             autoService        : 'com.google.auto.service:auto-service:1.0.1',
             // js bridge
             jsBridge           : "com.github.lzyzsd:jsbridge:2.0.0",
+
+            lottie             : "com.airbnb.android:lottie:6.3.0"
     ]
 
     plugin = [
