--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -116,6 +116,8 @@ dependencies {
 
     implementation app_impl.lottie
 
+    implementation app_impl.composeLiveData
+
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
