--- a/android/config.gradle
+++ b/android/config.gradle
@@ -4,7 +4,7 @@ ext {
     app_android = [
             namespace    : 'com.hele.android_native_architecture',
             applicationId: 'com.hele.android_native_architecture',
-            compileSdk   : 33,
+            compileSdk   : 34,
             minSdk       : 24,
             targetSdk    : 33,
             versionCode  : 1,
@@ -73,7 +73,8 @@ ext {
             // js bridge
             jsBridge           : "com.github.lzyzsd:jsbridge:2.0.0",
 
-            lottie             : "com.airbnb.android:lottie:6.3.0"
+            lottie             : "com.airbnb.android:lottie:6.3.0",
+            composeLiveData    : "androidx.compose.runtime:runtime-livedata:1.6.0"
     ]
 
     plugin = [
