--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -118,6 +118,8 @@ dependencies {
 
     implementation app_impl.composeLiveData
 
+    implementation app_impl.coilCompose
+
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
