--- a/android/config.gradle
+++ b/android/config.gradle
@@ -20,63 +20,64 @@ ext {
     def epoxy_version = "5.1.3"
 
     app_impl = [
-            activity           : 'androidx.activity:activity:1.5.1',
-            core               : 'androidx.core:core-ktx:1.8.0',
-            lifecycle          : 'androidx.lifecycle:lifecycle-runtime-ktx:2.3.1',
-            compose_activity   : 'androidx.activity:activity-compose:1.5.1',
-            compose_bom        : 'androidx.compose:compose-bom:2022.10.00',
-            compose_ui         : 'androidx.compose.ui:ui',
-            compose_ui_graphics: 'androidx.compose.ui:ui-graphics',
-            compose_ui_preview : 'androidx.compose.ui:ui-tooling-preview',
-            material3          : 'androidx.compose.material3:material3',
-            appcompat          : 'androidx.appcompat:appcompat:1.4.1',
-            material           : 'com.google.android.material:material:1.5.0',
-            viewmodel_ktx      : "androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecycle_version",
-            fragivity          : 'com.github.vitaviva.fragivity:core:0.3.1',
+            activity               : 'androidx.activity:activity:1.5.1',
+            core                   : 'androidx.core:core-ktx:1.8.0',
+            lifecycle              : 'androidx.lifecycle:lifecycle-runtime-ktx:2.3.1',
+            compose_activity       : 'androidx.activity:activity-compose:1.5.1',
+            compose_bom            : 'androidx.compose:compose-bom:2022.10.00',
+            compose_ui             : 'androidx.compose.ui:ui',
+            compose_ui_graphics    : 'androidx.compose.ui:ui-graphics',
+            compose_ui_preview     : 'androidx.compose.ui:ui-tooling-preview',
+            material3              : 'androidx.compose.material3:material3',
+            appcompat              : 'androidx.appcompat:appcompat:1.4.1',
+            material               : 'com.google.android.material:material:1.5.0',
+            viewmodel_ktx          : "androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecycle_version",
+            fragivity              : 'com.github.vitaviva.fragivity:core:0.3.1',
 
-            arouter_api        : 'com.alibaba:arouter-api:1.5.2',
-            arouter_compiler   : 'com.alibaba:arouter-compiler:1.5.2',
+            arouter_api            : 'com.alibaba:arouter-api:1.5.2',
+            arouter_compiler       : 'com.alibaba:arouter-compiler:1.5.2',
 
-            retrofit           : "com.squareup.retrofit2:retrofit:$retrofit_version",
-            converterGson      : "com.squareup.retrofit2:converter-gson:$retrofit_version",
+            retrofit               : "com.squareup.retrofit2:retrofit:$retrofit_version",
+            converterGson          : "com.squareup.retrofit2:converter-gson:$retrofit_version",
 
-            mmkv               : 'com.tencent:mmkv-static:1.3.0',
-            glide              : 'com.github.bumptech.glide:glide:4.15.1',
-            room               : "androidx.room:room-runtime:$room_version",
-            room_ktx           : "androidx.room:room-ktx:$room_version",
-            room_compiler      : "androidx.room:room-compiler:$room_version",
+            mmkv                   : 'com.tencent:mmkv-static:1.3.0',
+            glide                  : 'com.github.bumptech.glide:glide:4.15.1',
+            room                   : "androidx.room:room-runtime:$room_version",
+            room_ktx               : "androidx.room:room-ktx:$room_version",
+            room_compiler          : "androidx.room:room-compiler:$room_version",
 
-            cc                 : "com.billy.android:cc:2.1.5",
+            cc                     : "com.billy.android:cc:2.1.5",
 
-            autosize           : 'com.github.JessYanCoding:AndroidAutoSize:v1.2.1',
+            autosize               : 'com.github.JessYanCoding:AndroidAutoSize:v1.2.1',
 
-            epoxy              : "com.airbnb.android:epoxy:$epoxy_version",
-            epoxyKapt          : "com.airbnb.android:epoxy-processor:$epoxy_version",
-            epoxyDatabinding   : "com.airbnb.android:epoxy-databinding:$epoxy_version",
+            epoxy                  : "com.airbnb.android:epoxy:$epoxy_version",
+            epoxyKapt              : "com.airbnb.android:epoxy-processor:$epoxy_version",
+            epoxyDatabinding       : "com.airbnb.android:epoxy-databinding:$epoxy_version",
 
-            xlog               : "com.elvishew:xlog:1.11.0",
+            xlog                   : "com.elvishew:xlog:1.11.0",
 
-            epic               : "com.github.tiann:epic:0.11.2",
+            epic                   : "com.github.tiann:epic:0.11.2",
 
-            kotlin_reflect     : "org.jetbrains.kotlin:kotlin-reflect:1.9.20",
+            kotlin_reflect         : "org.jetbrains.kotlin:kotlin-reflect:1.9.20",
 
-            koin               : "io.insert-koin:koin-android:3.5.0",
+            koin                   : "io.insert-koin:koin-android:3.5.0",
 
-            loadsir            : "com.kingja.loadsir:loadsir:1.3.8",
+            loadsir                : "com.kingja.loadsir:loadsir:1.3.8",
 
             //Hybrid框架 https://github.com/Tencent/VasSonic
-            sonic              : 'com.tencent.sonic:sdk:3.1.0',
+            sonic                  : 'com.tencent.sonic:sdk:3.1.0',
             // tencent x5内核
-            tbssdk             : 'com.tencent.tbs:tbssdk:44286',
+            tbssdk                 : 'com.tencent.tbs:tbssdk:44286',
             // google auto service
-            autoService        : 'com.google.auto.service:auto-service:1.0.1',
+            autoService            : 'com.google.auto.service:auto-service:1.0.1',
             // js bridge
-            jsBridge           : "com.github.lzyzsd:jsbridge:2.0.0",
+            jsBridge               : "com.github.lzyzsd:jsbridge:2.0.0",
 
-            lottie             : "com.airbnb.android:lottie:6.3.0",
-            composeLiveData    : "androidx.compose.runtime:runtime-livedata:1.6.0",
+            lottie                 : "com.airbnb.android:lottie:6.3.0",
+            composeLiveData        : "androidx.compose.runtime:runtime-livedata:1.6.0",
 
-            coilCompose        : "io.coil-kt:coil-compose:2.6.0"
+            coilCompose            : "io.coil-kt:coil-compose:2.6.0",
+            constraintlayoutCompose: "androidx.constraintlayout:constraintlayout-compose:1.0.1"
     ]
 
     plugin = [
