fix fragivity issue.

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -122,6 +122,19 @@ dependencies {
 
     implementation app_impl.constraintlayoutCompose
 
+//    constraints {
+    implementation("androidx.fragment:fragment"){
+        version {
+            strictly("1.3.6")
+        }
+    }
+    implementation("androidx.fragment:fragment-ktx"){
+        version {
+            strictly("1.3.6")
+        }
+    }
+//    }
+
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
