--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -24,4 +24,5 @@ android.nonTransitiveRClass=true
 android.enableJetifier=true
 #k2 compiler
 kotlin.experimental.tryK2=false
+android.suppressUnsupportedCompileSdk=34
 
