--- a/android/config.gradle
+++ b/android/config.gradle
@@ -33,7 +33,7 @@ ext {
             material               : 'com.google.android.material:material:1.5.0',
             viewmodel_ktx          : "androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecycle_version",
             fragivity              : 'com.github.vitaviva.fragivity:core:0.3.1',
-
+            fragment               : 'androidx.fragment:fragment:1.3.6',
             arouter_api            : 'com.alibaba:arouter-api:1.5.2',
             arouter_compiler       : 'com.alibaba:arouter-compiler:1.5.2',
 
