--- a/android/settings.gradle
+++ b/android/settings.gradle
@@ -47,11 +47,17 @@ pluginManagement {
             if (requested.id.id == 'com.dorongold.task-tree') {
                 useModule("gradle.plugin.com.dorongold.plugins:task-tree:1.5")
             }
+
+            if (requested.id.id == 'androidx.fragment') {
+                useVersion("1.3.6")
+            }
         }
     }
 }
+
 dependencyResolutionManagement {
     repositoriesMode.set(RepositoriesMode.FAIL_ON_PROJECT_REPOS)
+
     repositories {
         maven {
             allowInsecureProtocol(true)
