--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -43,6 +43,10 @@ android {
                         "room.expandProjection": "true"]
             }
         }
+
+        ndk{
+            abiFilters 'armeabi-v7a', 'arm64-v8a'
+        }
     }
 
     buildTypes {
@@ -85,6 +89,8 @@ android {
 
         }
     }
+
+
 }
 
 dependencies {
