--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -44,7 +44,9 @@ android {
             }
         }
 
-        ndk{
+        resConfigs 'en', 'zh-rCN' // 只保留英,中文资源
+
+        ndk {
             abiFilters 'armeabi-v7a', 'arm64-v8a'
         }
     }
@@ -69,6 +71,8 @@ android {
     packagingOptions {
         resources {
             excludes += '/META-INF/{AL2.0,LGPL2.1}'
+        }
+        jniLibs {
         }
     }
     buildFeatures {
@@ -129,12 +133,12 @@ dependencies {
     implementation app_impl.constraintlayoutCompose
 
 //    constraints {
-    implementation("androidx.fragment:fragment"){
+    implementation("androidx.fragment:fragment") {
         version {
             strictly("1.3.6")
         }
     }
-    implementation("androidx.fragment:fragment-ktx"){
+    implementation("androidx.fragment:fragment-ktx") {
         version {
             strictly("1.3.6")
         }
