--- a/android/settings.gradle
+++ b/android/settings.gradle
@@ -104,3 +104,5 @@ include ':base'
 //include ':plugin_test'
 include ':webview'
 include ':plugin_template'
+include ':ksp_template'
+include ':annotation_template'
