--- a/android/build.gradle
+++ b/android/build.gradle
@@ -15,6 +15,7 @@ plugins {
     id 'org.jetbrains.kotlin.android' version '1.9.10' apply false
     id 'org.jetbrains.kotlin.jvm' version '1.9.10' apply false
 //    id 'cc-register' version '1.1.2' apply false
+    id 'com.google.devtools.ksp' version '1.9.10-1.0.13' apply false
 }
 
 subprojects {
