--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -79,6 +79,7 @@ android {
             excludes += '/META-INF/{AL2.0,LGPL2.1}'
         }
         jniLibs {
+            useLegacyPackaging = true
         }
     }
     buildFeatures {
