--- a/android/cc-settings-2.gradle
+++ b/android/cc-settings-2.gradle
@@ -5,7 +5,7 @@
 // 功能介绍：
 //  完成组件、拦截器及跨进程json解释器等CC库自身需要的自动注册功能
 //  支持新增自定义的其它自动注册功能，参考AutoRegister，用法参考cc-settings-demo.gradle
-project.apply plugin: 'cc-register'
+//project.apply plugin: 'cc-register'
 project.dependencies.add('api', "com.billy.android:cc:2.1.5") //用最新版
 
 //此文件是作为组件化配置的公共gradle脚本文件，在每个组件中都apply此文件，下载到工程根目录后，可以在下方添加一些自己工程中通用的配置
