--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -25,4 +25,5 @@ android.enableJetifier=true
 #k2 compiler
 kotlin.experimental.tryK2=false
 android.suppressUnsupportedCompileSdk=34
+android.nonFinalResIds=false
 
