--- a/android/config.gradle
+++ b/android/config.gradle
@@ -62,6 +62,12 @@ ext {
 
             koin                   : "io.insert-koin:koin-android:3.5.0",
 
+            dagger                 : "com.google.dagger:dagger:2.51.1",
+            dagger_compiler        : "com.google.dagger:dagger-compiler:2.51.1",
+//            dagger_android          : "com.google.dagger:dagger-android:2.51.1",
+//            dagger_android_support  : "com.google.dagger:dagger-android-support:2.51.1",
+//            dagger_android_processor: "com.google.dagger:dagger-android-processor:2.51.1",
+
             loadsir                : "com.kingja.loadsir:loadsir:1.3.8",
 
             //Hybrid框架 https://github.com/Tencent/VasSonic
@@ -81,7 +87,9 @@ ext {
             kspProcessing          : "com.google.devtools.ksp:symbol-processing-api:1.9.10-1.0.13",
             kotlinPeot             : "com.squareup:kotlinpoet:1.7.1",
 
-            coil                   : "io.coil-kt:coil:2.6.0"
+            coil                   : "io.coil-kt:coil:2.6.0",
+
+            leakcanary             : "com.squareup.leakcanary:leakcanary-android:2.14"
     ]
 
     plugin = [
