--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -46,13 +46,13 @@ jobs:
         ls -la
 
     - name: Build with Gradle
-      run: ./gradlew assemble${{ github.event.inputs.mode }}
+      run: ./android/gradlew assemble${{ github.event.inputs.mode }}
 
     - name: Upload Artifact
       uses: actions/upload-artifact@v2
       with:
         name: app-${{ github.event.inputs.mode }}
-        path: app/build/outputs/apk/${{ github.event.inputs.mode }}/*.apk
+        path: ./android/app/build/outputs/apk/${{ github.event.inputs.mode }}/*.apk
 
     - name: Send Slack Notification
       env:
